# jernerics

./: example_experiment.yaml  flake.nix  pyproject.toml
src/jernerics/: _cli_helpers.py  cli.py
src/jernerics/experiment/: __init__.py  _base_experiment.py  train.py
src/jernerics/generate/: data.py
src/jernerics/scripts/: cleanup_experiment.py  run_batch.sh  run_experiment.sh
